# finding-declaration

./: .gitignore  PLAN.md  README.md  SPEC.md  pyproject.toml  query_findings.py  schema.json
content/: 01-findings-are-dying.md
examples/invalid/: bad-verdict.json  empty-findings.json  empty-scope.json  missing-schema.json  missing-verdict.json  whitespace-claim.json
examples/valid/: clinical.json  experiment.json  formal.json  inconclusive.json  replication.json  security.json  undecidable.json
src/findcheck/: __init__.py  cli.py  validator.py
tests/: test_conformance.py  test_roundtrip.py
